# predictor-autoresearch

./: SKILL.md  pyproject.toml
agents/: openai.yaml
predictor_autoresearch/: __init__.py  cli.py  context_sampling.py  data_contracts.py  fde_bridge.py  model_runner.py  report.py  resource_logging.py  search.py
references/: search-policy.md
scripts/: run_predictor_autoresearch.py
tests/: test_artifacts.py  test_cli_smoke.py  test_context_sampling.py  test_data_contracts.py  test_e2e_fake.py  test_env_check.py  test_fde_bridge.py  test_feature_pool.py  test_holdout.py  test_model_runner.py  test_report.py  test_resource_logging.py  test_scoring.py  test_search.py
