[project]
name = "predictor-autoresearch"
version = "0.1.0"
description = "Local offline AutoResearch for FDE TabPFN3 predictor fitability validation"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "pandas",
  "pyarrow",
  "plotly",
  "scikit-learn",
  "xgboost",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]
frequency = ["tsfresh"]

[project.scripts]
predictor-autoresearch = "predictor_autoresearch.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
